examples/test/testpolicy11052.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11052
  namespace: namespace363
spec:
  podSelector:
    matchLabels:
      key24: value41
      key41: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value14
      podSelector:
        matchLabels:
          key10: value28
          key15: value21
          key20: value26
